@@ -1,3 +1,11 @@
+2008-12-14
+	* Add help of SearchFiles and GetFileId.
+	* Change the default of ask argument of undelete to TRUE.
+
+2008-12-13
+	* New function of gselect.list, gtk version of select.list.
+	* Add help of SummaryCoding, improve help of write.FileList.
+
 2008-12-12
 	* Fix bugs of SortByTime(), now should work for R < 2.8.0. Fix bug of GetCodingTable and SummaryCoding.
 	* New function of RunOnSelected. Use it to replace select.list.
